--- a/VidCoder/View/Panels/AudioPanel.xaml
+++ b/VidCoder/View/Panels/AudioPanel.xaml
@@ -189,7 +189,7 @@
 			<controls:InlineWarning
 				Visibility="{Binding PassthroughWarningVisible, Converter={StaticResource VisibilityConverter}}"
 				Margin="0,10,0,0" HorizontalAlignment="Left"
-				WarningText="Passthrough only works for AAC, AC3, MP3, DTS and DTS-HD sources. One or more audio tracks were dropped." />
+				WarningText="{Binding PassthroughWarningText}" />
 		</StackPanel>
 	</Grid>
 </UserControl>
