--- a/VidCoder/View/MainWindow.xaml
+++ b/VidCoder/View/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="VidCoder.View.MainWindow"
+﻿<Window
+	x:Class="VidCoder.View.MainWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:local="clr-namespace:VidCoder"
