Fix bug with the watermark text appearing while editing a NumberBox

--- a/VidCoder/Controls/NumberBox.xaml
+++ b/VidCoder/Controls/NumberBox.xaml
@@ -134,7 +134,7 @@
 		<TextBox
 			Name="numberBox"
 			Grid.Column="0"
-			GotFocus="numberBox_GotFocus"
+			GotFocus="NumberBoxGotFocus"
 			LostFocus="NumberBoxLostFocus"
 			PreviewTextInput="NumberBoxPreviewTextInput"
 			PreviewKeyDown="NumberBoxPreviewKeyDown"
