--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -123,5 +123,23 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
+		
+		<ControlTemplate x:Key="PopupInfoTemplate" TargetType="ContentControl">
+			<Border
+				BorderBrush="Gray"
+				BorderThickness="1"
+				CornerRadius="4">
+				<Border.Effect>
+					<DropShadowEffect ShadowDepth="6" BlurRadius="3" Direction="315" Opacity="0.3" />
+				</Border.Effect>
+				<Border.Background>
+					<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+						<GradientStop Color="White" Offset="0.0" />
+						<GradientStop Color="LightGray" Offset="1.0" />
+					</LinearGradientBrush>
+				</Border.Background>
+				<ContentPresenter />
+			</Border>
+		</ControlTemplate>
 	</Application.Resources>
 </Application>
